# tracky

./: .replit  README.md  dump.sh  pyproject.toml  replit.nix
scripts/: render_test.py
tracky/cars/: __init__.py  car.py  car_manager.py  car_manager_test.py  car_test.py
tracky/core/: __init__.py  errorable.py  errorable_test.py  validatable.py  validatable_test.py
tracky/sim/: __init__.py  sim.py  sim_test.py
tracky/track/: __init__.py
tracky/track/grid/: __init__.py  direction.py  direction_test.py  grid.py  grid_test.py  position.py  position_test.py  rotation.py  rotation_test.py
tracky/track/piece/: __init__.py  connection.py  connection_test.py  piece.py  piece_test.py  position.py  position_test.py
tracky/track/pieces/: __init__.py  connection.py  connection_shape.py  connection_test.py  piece.py  piece_test.py  position.py  position_test.py
tracky/visuals/: __init__.py  offset.py  offset_test.py  position.py  position_test.py  projection.py  projection_test.py  rectangle.py  rectangle_test.py  rotation.py  rotation_test.py  vector.py  vector_test.py  visualizer.py
